unpackaged/main/default/objects/SFCPQ_Usernames_Mapping_Settings__c/SFCPQ_Usernames_Mapping_Settings__c.object-meta.xml
<CustomObject>
    <label>SFCPQ Usernames Mapping Settings</label>
    <nameField>
        <displayFormat>UMS-{00000}</displayFormat>
        <label>SFCPQ Usernames Mapping Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFCPQ Usernames Mapping Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>