unpackaged/main/default/objects/SFCPQ_Usernames_Mapping_Settings__c/fields/CPQ_Username__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Username__c</fullName>
    <label>CPQ Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>