unpackaged/main/default/objects/SFCPQ_Usernames_Mapping_Settings__c/fields/SF_User__c.field-meta.xml
<CustomField>
    <fullName>SF_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SFCPQ_Usernames_Mapping_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>