unpackaged/main/default/objects/SFCPQ_Usernames_Mapping_Settings__c/fields/SF_Username__c.field-meta.xml
<CustomField>
    <fullName>SF_Username__c</fullName>
    <label>SF Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>