unpackaged/main/default/objects/SFCPQ_Usernames_Mapping_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CPQ_Username__c</columns>
    <columns>SF_User__c</columns>
    <columns>SF_Username__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>